--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,9 @@
 
 <hr>
 
-<button class="btn"></button>
-<div class="balloon"></div>
+<button id="btn">azerty</button>
+<div id="balloon"></div>
+
+<script src="/src/index.js"></script>
 </body>
 </html>
